--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -77,7 +77,7 @@ jobs:
     needs: dockerBuildPush
     environment:
       name: dev
-      url: https://ioni-techexcel-20241030-dev.azurewebsites.net/
+      url: https://yn4liyqsk6d2o-dev.azurewebsites.net/
 
     steps:
       - name: "Login via Azure CLI"
@@ -87,7 +87,7 @@ jobs:
 
       - uses: azure/webapps-deploy@v2
         with:
-          app-name: "ioni-techexcel-20241030-dev"
+          app-name: "yn4liyqsk6d2o-dev"
           images: yn4liyqsk6d2ompnpreg.azurecr.io/techexcel/dotnetcoreapp:${{github.run_number}}
 
   deploy-to-test:
@@ -95,7 +95,7 @@ jobs:
     needs: deploy-to-dev
     environment:
       name: test
-      url: https://ioni-techexcel-20241030-test.azurewebsites.net/
+      url: https://yn4liyqsk6d2o-test.azurewebsites.net/
 
     steps:
       - uses: actions/checkout@v3
@@ -107,7 +107,7 @@ jobs:
 
       - uses: azure/webapps-deploy@v2
         with:
-          app-name: "ioni-techexcel-20241030-test"
+          app-name: "yn4liyqsk6d2o-test"
           images: yn4liyqsk6d2ompnpreg.azurecr.io/techexcel/dotnetcoreapp:${{github.run_number}}
 
   deploy-to-prod:
@@ -115,7 +115,7 @@ jobs:
     needs: deploy-to-test
     environment:
       name: prod
-      url: https://ioni-techexcel-20241030-prod.azurewebsites.net/
+      url: https://yn4liyqsk6d2o-prod.azurewebsites.net/
 
     steps:
       - uses: actions/checkout@v3
@@ -127,5 +127,5 @@ jobs:
 
       - uses: azure/webapps-deploy@v2
         with:
-          app-name: "ioni-techexcel-20241030-prod"
+          app-name: "yn4liyqsk6d2o-prod"
           images: yn4liyqsk6d2ompnpreg.azurecr.io/techexcel/dotnetcoreapp:${{github.run_number}}
